# pico_dm_qd3503728_umac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
discs/: system3.3-finder5.5-en.img
include/: video.h
src/: CMakeLists.txt  disc.S  ili9488.c  main.c  rom.S
